k8s/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-app-deployment
  namespace: forum
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: forum-app
  template:
    metadata:
      labels:
        app: forum-app
    spec:
      containers:
        - name: forum-app
          image: lucasferraz95/forum-backend:1.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
