k8s/app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: forum-app
  namespace: forum
spec:
  type: NodePort
  selector:
    app: forum-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31002
